src/main/resources/ui/ingame/menueBar.css
@import url("/ui/darkTheme.css");

.label.default {
    -fx-font-size: 16pt;
    -fx-text-fill: -on-primary-fill;
    -fx-font-family: Roboto-Regular;
}

.label.roundCount {
    -fx-font-size: 32pt;
    -text-align: center;
    -fx-font-weight: bold;
    -fx-font-family: Roboto-Medium;
    -fx-color: white;
    -fx-background-color: -surface-elevation-8-color;
}

